Small change to DSigma, added scripts to plot mass and SZ profile ratios

--- a/tests/test_filters.ipynb
+++ b/tests/test_filters.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "radPixel = 2\n",
     "\n",
-    "rcutout_array = np.zeros((5,5))"
+    "cutout_array = np.zeros((5,5))"
    ]
   },
   {
