Started subhalo selection code (stacker not done), added visualization script

--- a/tests/test_mask_haloes.ipynb
+++ b/tests/test_mask_haloes.ipynb
@@ -119,15 +119,7 @@
    "execution_count": 7,
    "id": "7f45e660",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(6305,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "haloes['GroupMass'] = haloes['GroupMass'][halo_mask]\n",
     "haloes['GroupRad'] = haloes['GroupRad'][halo_mask] * 3\n",
@@ -279,7 +271,7 @@
     "\n",
     "plt.tight_layout()\n",
     "# plt.show()\n",
-    "plt.savefig('../figures/2025-09/masked_tau_TNG300.png', dpi=300)"
+    "# plt.savefig('../figures/2025-09/masked_tau_TNG300.png', dpi=300)"
    ]
   },
   {
